--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,7 @@
         <dependency>
             <groupId>org.gridsuite</groupId>
             <artifactId>gridsuite-filter</artifactId>
+            <version>1.0.8</version>
         </dependency>
         <dependency>
             <groupId>com.powsybl</groupId>
