upgrade powsybl-ws-commons.version
Signed-off-by: Mathieu DEHARBE <mathieu.deharbe@rte-france.com>

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
         <h2database.version>1.4.200</h2database.version>
         <liquibase-hibernate-package>org.gridsuite.ds.server</liquibase-hibernate-package>
         <string-template.version>4.3.1</string-template.version>
+        <powsybl-ws-commons.version>1.11.0</powsybl-ws-commons.version><!-- should be removed once gridsuite-dependencies is upgraded-->
     </properties>
 
     <build>
@@ -152,6 +153,7 @@
         <dependency>
             <groupId>com.powsybl</groupId>
             <artifactId>powsybl-ws-commons</artifactId>
+            <version>${powsybl-ws-commons.version}</version>
         </dependency>
         <dependency>
             <groupId>org.liquibase</groupId>
