--- a/pom.xml
+++ b/pom.xml
@@ -145,9 +145,11 @@
             <groupId>com.powsybl</groupId>
             <artifactId>powsybl-dynawaltz-dsl</artifactId>
         </dependency>
+        <!-- FIXME: gridsuite-filter modules' version is overloaded in the dependencies section. The overloads and this property below have to be removed at next gridsuite-dependencies.version upgrade -->
         <dependency>
             <groupId>org.gridsuite</groupId>
             <artifactId>gridsuite-filter</artifactId>
+            <version>1.0.12</version>
         </dependency>
         <dependency>
             <groupId>com.powsybl</groupId>
