Renamming DynaWaltz to Dynawo
Signed-off-by: Thang PHAM <phamthang37@gmail.com>

--- a/src/main/resources/config/application.yaml
+++ b/src/main/resources/config/application.yaml
@@ -37,6 +37,6 @@ powsybl-ws:
   database:
     name: ds
 
-# default values for dynamic simulation providers is "DynaWaltz"
+# default values for dynamic simulation providers is "Dynawo"
 dynamic-simulation:
-  default-provider: DynaWaltz
+  default-provider: Dynawo
