--- a/src/test/resources/com/powsybl/config/test/config.yml
+++ b/src/test/resources/com/powsybl/config/test/config.yml
@@ -1,4 +1,4 @@
-dynawaltz:
+dynawo:
   # home dir references to directory inside the container java-dynawo
   homeDir: /dynaflow-launcher
   debug: true
