upgrade gridsuite dependencies to v35 (#115)
Signed-off-by: Etienne LESOT <etienne.lesot@rte-france.com>
Signed-off-by: Thang PHAM <phamthang37@gmail.com>
Co-authored-by: Thang PHAM <phamthang37@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
     </developers>
 
     <properties>
-        <gridsuite-dependencies.version>34</gridsuite-dependencies.version>
+        <gridsuite-dependencies.version>35</gridsuite-dependencies.version>
         <jib.from.image>powsybl/java-dynawo:2.2.0</jib.from.image>
 
         <h2database.version>1.4.200</h2database.version>
@@ -139,11 +139,11 @@
         </dependency>
         <dependency>
             <groupId>com.powsybl</groupId>
-            <artifactId>powsybl-dynawaltz</artifactId>
+            <artifactId>powsybl-dynawo-simulation</artifactId>
         </dependency>
         <dependency>
             <groupId>com.powsybl</groupId>
-            <artifactId>powsybl-dynawaltz-dsl</artifactId>
+            <artifactId>powsybl-dynawo-dsl</artifactId>
         </dependency>
         <dependency>
             <groupId>org.gridsuite</groupId>
