--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -12,3 +12,6 @@ databaseChangeLog:
   - include:
       file: changesets/changelog_20241029T195403Z.xml
       relativeToChangelogFile: true
+  - include:
+      file: changesets/changelog_20241205T235011Z.xml
+      relativeToChangelogFile: true
