--- a/src/main/resources/config/application.yaml
+++ b/src/main/resources/config/application.yaml
@@ -12,6 +12,7 @@ spring:
           group: dsGroup
           consumer:
             concurrency: 2
+            max-attempts: 1
         publishRun-out-0:
           destination: ${powsybl-ws.rabbitmq.destination.prefix:}ds.run
         publishResult-out-0:
@@ -22,11 +23,20 @@ spring:
           destination: ${powsybl-ws.rabbitmq.destination.prefix:}ds.cancel
         publishStopped-out-0:
           destination: ${powsybl-ws.rabbitmq.destination.prefix:}ds.stopped
-        publishFailed-out-0:
-          destination: ${powsybl-ws.rabbitmq.destination.prefix:}ds.failed
         publishCancelFailed-out-0:
           destination: ${powsybl-ws.rabbitmq.destination.prefix:}ds.cancelfailed
-      output-bindings: publishRun-out-0;publishResult-out-0;publishCancel-out-0;publishStopped-out-0;publishFailed-out-0;publishCancelFailed-out-0
+      output-bindings: publishRun-out-0;publishResult-out-0;publishCancel-out-0;publishStopped-out-0;publishCancelFailed-out-0
+      rabbit:
+        bindings:
+          consumeRun-in-0:
+            consumer:
+              auto-bind-dlq: true
+              dead-letter-exchange: ${powsybl-ws.rabbitmq.destination.prefix:}ds.run.dlx
+              dead-letter-queue-name: ${powsybl-ws.rabbitmq.destination.prefix:}ds.run.dlx.dlq
+              dead-letter-exchange-type: topic
+              quorum:
+                enabled: true
+                delivery-limit: 2
 
 powsybl:
   services:
