--- a/pom.xml
+++ b/pom.xml
@@ -90,12 +90,12 @@
             <dependency>
                 <groupId>com.powsybl</groupId>
                 <artifactId>powsybl-time-series-api</artifactId>
-                <version>6.7.0-SNAPSHOT</version>
+                <version>6.6.1</version>
             </dependency>
             <dependency>
                 <groupId>com.powsybl</groupId>
                 <artifactId>powsybl-time-series-dsl</artifactId>
-                <version>6.7.0-SNAPSHOT</version>
+                <version>6.6.1</version>
             </dependency>
             <!-- imports -->
             <dependency>
@@ -141,22 +141,22 @@
         <dependency>
             <groupId>com.powsybl</groupId>
             <artifactId>powsybl-dynamic-simulation-api</artifactId>
-            <version>6.7.0-SNAPSHOT</version>
+            <version>6.6.1</version>
         </dependency>
         <dependency>
             <groupId>com.powsybl</groupId>
             <artifactId>powsybl-dynamic-simulation-dsl</artifactId>
-            <version>6.7.0-SNAPSHOT</version>
+            <version>6.6.1</version>
         </dependency>
         <dependency>
             <groupId>com.powsybl</groupId>
             <artifactId>powsybl-dynawo-simulation</artifactId>
-            <version>2.8.0-SNAPSHOT</version>
+            <version>2.7.1</version>
         </dependency>
         <dependency>
             <groupId>com.powsybl</groupId>
             <artifactId>powsybl-dynawo-dsl</artifactId>
-            <version>2.8.0-SNAPSHOT</version>
+            <version>2.7.1</version>
         </dependency>
         <dependency>
             <groupId>org.gridsuite</groupId>
