correct with FIXME
Signed-off-by: Thang PHAM <phamthang37@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
         <h2database.version>1.4.200</h2database.version>
         <liquibase-hibernate-package>org.gridsuite.ds.server</liquibase-hibernate-package>
         <string-template.version>4.3.1</string-template.version>
+
+        <!-- FIXME: powsybl-time-series, powsybl-dynamic-simulation, powsybl-dynawo modules' versions are overloaded in the dependencies section. The overloads and this property below have to be removed at next gridsuite-dependencies.version upgrade -->
+        <powsybl-time-series.version>6.6.1</powsybl-time-series.version>
+        <powsybl-dynamic-simulation.version>6.6.1</powsybl-dynamic-simulation.version>
+        <powsybl-dynawo.version>2.7.1</powsybl-dynawo.version>
     </properties>
 
     <build>
@@ -87,15 +92,17 @@
     <dependencyManagement>
         <dependencies>
             <!-- overrides of imports -->
+            <!-- FIXME: to be removed at next gridsuite-dependencies upgrade  -->
             <dependency>
                 <groupId>com.powsybl</groupId>
                 <artifactId>powsybl-time-series-api</artifactId>
-                <version>6.6.1</version>
+                <version>${powsybl-time-series.version}</version>
             </dependency>
+            <!-- FIXME: to be removed at next gridsuite-dependencies upgrade  -->
             <dependency>
                 <groupId>com.powsybl</groupId>
                 <artifactId>powsybl-time-series-dsl</artifactId>
-                <version>6.6.1</version>
+                <version>${powsybl-time-series.version}</version>
             </dependency>
             <!-- imports -->
             <dependency>
@@ -141,22 +148,26 @@
         <dependency>
             <groupId>com.powsybl</groupId>
             <artifactId>powsybl-dynamic-simulation-api</artifactId>
-            <version>6.6.1</version>
+            <!-- FIXME: to be removed at next gridsuite-dependencies upgrade  -->
+            <version>${powsybl-dynamic-simulation.version}</version>
         </dependency>
         <dependency>
             <groupId>com.powsybl</groupId>
             <artifactId>powsybl-dynamic-simulation-dsl</artifactId>
-            <version>6.6.1</version>
+            <!-- FIXME: to be removed at next gridsuite-dependencies upgrade  -->
+            <version>${powsybl-dynamic-simulation.version}</version>
         </dependency>
         <dependency>
             <groupId>com.powsybl</groupId>
             <artifactId>powsybl-dynawo-simulation</artifactId>
-            <version>2.7.1</version>
+            <!-- FIXME: to be removed at next gridsuite-dependencies upgrade  -->
+            <version>${powsybl-dynawo.version}</version>
         </dependency>
         <dependency>
             <groupId>com.powsybl</groupId>
             <artifactId>powsybl-dynawo-dsl</artifactId>
-            <version>2.7.1</version>
+            <!-- FIXME: to be removed at next gridsuite-dependencies upgrade  -->
+            <version>${powsybl-dynawo.version}</version>
         </dependency>
         <dependency>
             <groupId>org.gridsuite</groupId>
