modifs only in overrides imports
Signed-off-by: Thang PHAM <phamthang37@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -50,8 +50,7 @@
         <string-template.version>4.3.1</string-template.version>
 
         <!-- FIXME: powsybl-time-series, powsybl-dynamic-simulation, powsybl-dynawo modules' versions are overloaded in the dependencies section. The overloads and this property below have to be removed at next gridsuite-dependencies.version upgrade -->
-        <powsybl-time-series.version>6.6.1</powsybl-time-series.version>
-        <powsybl-dynamic-simulation.version>6.6.1</powsybl-dynamic-simulation.version>
+        <powsybl-core.version>6.6.1</powsybl-core.version>
         <powsybl-dynawo.version>2.7.1</powsybl-dynawo.version>
     </properties>
 
@@ -96,13 +95,32 @@
             <dependency>
                 <groupId>com.powsybl</groupId>
                 <artifactId>powsybl-time-series-api</artifactId>
-                <version>${powsybl-time-series.version}</version>
+                <version>${powsybl-core.version}</version>
             </dependency>
-            <!-- FIXME: to be removed at next gridsuite-dependencies upgrade  -->
             <dependency>
                 <groupId>com.powsybl</groupId>
                 <artifactId>powsybl-time-series-dsl</artifactId>
-                <version>${powsybl-time-series.version}</version>
+                <version>${powsybl-core.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.powsybl</groupId>
+                <artifactId>powsybl-dynamic-simulation-api</artifactId>
+                <version>${powsybl-core.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.powsybl</groupId>
+                <artifactId>powsybl-dynamic-simulation-dsl</artifactId>
+                <version>${powsybl-core.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.powsybl</groupId>
+                <artifactId>powsybl-dynawo-simulation</artifactId>
+                <version>${powsybl-dynawo.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.powsybl</groupId>
+                <artifactId>powsybl-dynawo-dsl</artifactId>
+                <version>${powsybl-dynawo.version}</version>
             </dependency>
             <!-- imports -->
             <dependency>
@@ -148,26 +166,18 @@
         <dependency>
             <groupId>com.powsybl</groupId>
             <artifactId>powsybl-dynamic-simulation-api</artifactId>
-            <!-- FIXME: to be removed at next gridsuite-dependencies upgrade  -->
-            <version>${powsybl-dynamic-simulation.version}</version>
         </dependency>
         <dependency>
             <groupId>com.powsybl</groupId>
             <artifactId>powsybl-dynamic-simulation-dsl</artifactId>
-            <!-- FIXME: to be removed at next gridsuite-dependencies upgrade  -->
-            <version>${powsybl-dynamic-simulation.version}</version>
         </dependency>
         <dependency>
             <groupId>com.powsybl</groupId>
             <artifactId>powsybl-dynawo-simulation</artifactId>
-            <!-- FIXME: to be removed at next gridsuite-dependencies upgrade  -->
-            <version>${powsybl-dynawo.version}</version>
         </dependency>
         <dependency>
             <groupId>com.powsybl</groupId>
             <artifactId>powsybl-dynawo-dsl</artifactId>
-            <!-- FIXME: to be removed at next gridsuite-dependencies upgrade  -->
-            <version>${powsybl-dynawo.version}</version>
         </dependency>
         <dependency>
             <groupId>org.gridsuite</groupId>
