[DS and DSA] Move GZipUtils to powsybl-ws-commons
Signed-off-by: Thang PHAM <phamthang37@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,9 @@
         <h2database.version>1.4.200</h2database.version>
         <liquibase-hibernate-package>org.gridsuite.ds.server</liquibase-hibernate-package>
         <string-template.version>4.3.1</string-template.version>
+
+        <!-- FIXME: powsybl-ws-commons module's version is overloaded in the dependencies section. The overloads and this property below have to be removed at next gridsuite-dependencies.version upgrade -->
+        <powsybl-ws-commons.version>1.23.0-SNAPSHOT</powsybl-ws-commons.version>
     </properties>
 
     <build>
@@ -87,6 +90,12 @@
     <dependencyManagement>
         <dependencies>
             <!-- overrides of imports -->
+            <!-- FIXME: to be removed at next gridsuite-dependencies upgrade  -->
+            <dependency>
+                <groupId>com.powsybl</groupId>
+                <artifactId>powsybl-ws-commons</artifactId>
+                <version>${powsybl-ws-commons.version}</version>
+            </dependency>
             <!-- imports -->
             <dependency>
                 <groupId>org.gridsuite</groupId>
