--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,8 @@
         <h2database.version>1.4.200</h2database.version>
         <liquibase-hibernate-package>org.gridsuite.ds.server</liquibase-hibernate-package>
         <string-template.version>4.3.1</string-template.version>
+        <sonar.organization>gridsuite</sonar.organization>
+        <sonar.projectKey>org.gridsuite:dynamic-simulation-server</sonar.projectKey>
     </properties>
 
     <build>
