--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -15,3 +15,6 @@ databaseChangeLog:
   - include:
       file: changesets/changelog_20241205T235011Z.xml
       relativeToChangelogFile: true
+  - include:
+      file: changesets/changelog_20250423T210238Z.xml
+      relativeToChangelogFile: true
