--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -4,6 +4,10 @@ server:
 spring:
   rabbitmq:
     addresses: localhost
+  cloud:
+    aws:
+      endpoint: http://localhost:19000
+      bucket: bucket-gridsuite
 
 powsybl-ws:
   database:
