--- a/src/main/resources/config/application.yaml
+++ b/src/main/resources/config/application.yaml
@@ -47,7 +47,7 @@ spring:
         profile:
           name: default
         static: test
-      bucket: my-bucket
+      bucket: bucket-gridsuite
       credentials:
         access-key: minioadmin
         secret-key: minioadmin
