s3 debug subpath now configurable
Signed-off-by: Thang PHAM <phamthang37@gmail.com>

--- a/src/main/resources/config/application.yaml
+++ b/src/main/resources/config/application.yaml
@@ -51,6 +51,9 @@ spring:
       credentials:
         access-key: minioadmin
         secret-key: minioadmin
+
+debug-subpath: debug
+
 powsybl:
   services:
     network-store-server:
