--- a/src/main/resources/config/application.yaml
+++ b/src/main/resources/config/application.yaml
@@ -39,9 +39,9 @@ spring:
               quorum:
                 enabled: true
                 delivery-limit: 2
-    aws:
-      s3:
-        enabled: true
+computation:
+  s3:
+    enabled: true
 
 debug-subpath: debug
 
