--- a/pom.xml
+++ b/pom.xml
@@ -44,9 +44,9 @@
     <properties>
         <gridsuite-dependencies.version>42.0.0</gridsuite-dependencies.version>
         <!-- FIXME to remove at next upgrade of gridsuite-dependencies -->
-        <gridsuite-computation.version>1.1.0-SNAPSHOT</gridsuite-computation.version>
+        <gridsuite-computation.version>1.1.0</gridsuite-computation.version>
         <!-- FIXME to remove at next upgrade of powsybl-ws-dependencies -->
-        <powsybl-ws-commons.version>1.29.0-SNAPSHOT</powsybl-ws-commons.version>
+        <powsybl-ws-commons.version>1.28.1</powsybl-ws-commons.version>
 
         <jib.from.image>powsybl/java-dynawo:3.0.0</jib.from.image>
 
