--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,8 @@
         <gridsuite-computation.version>1.1.0</gridsuite-computation.version>
         <!-- FIXME to remove at next upgrade of powsybl-ws-dependencies -->
         <powsybl-ws-commons.version>1.28.1</powsybl-ws-commons.version>
+        <!-- FIXME to remove at next upgrade of powsybl-ws-dependencies -->
+        <gridsuite-filter.version>1.7.0</gridsuite-filter.version>
 
         <jib.from.image>powsybl/java-dynawo:3.0.0</jib.from.image>
 
@@ -118,6 +120,7 @@
         <dependency>
             <groupId>org.gridsuite</groupId>
             <artifactId>gridsuite-filter</artifactId>
+            <version>${gridsuite-filter.version}</version>
         </dependency>
         <dependency>
             <groupId>org.antlr</groupId>
