--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,8 @@
     <properties>
         <gridsuite-dependencies.version>47.0.0</gridsuite-dependencies.version>
         <jib.from.image>powsybl/java-dynawo:3.1.0</jib.from.image>
+        <!-- FIXME to remove when upgrade powsybl-ws-dependencies to springboot 3.5.9 -->
+        <testcontainers.version>1.21.4</testcontainers.version>
         <h2database.version>1.4.200</h2database.version>
         <liquibase-hibernate-package>org.gridsuite.ds.server</liquibase-hibernate-package>
         <string-template.version>4.3.1</string-template.version>
@@ -88,6 +90,11 @@
     <dependencyManagement>
         <dependencies>
             <!-- overrides of imports -->
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>testcontainers</artifactId>
+                <version>${testcontainers.version}</version>
+            </dependency>
 
             <!-- imports -->
             <dependency>
