--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,7 @@
         <dependency>
             <groupId>org.gridsuite</groupId>
             <artifactId>gridsuite-filter</artifactId>
+            <version>1.21.0</version>
         </dependency>
         <dependency>
             <groupId>org.antlr</groupId>
